<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="@dimen/sp14"
            android:layout_marginTop="@dimen/dp20h"
            android:text="@string/select_day"/>
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/week_array"
            android:layout_centerHorizontal="true"
            android:id="@+id/calendarView"
            android:layout_marginTop="@dimen/dp50h"
            android:layout_marginBottom="@dimen/dp10h"
            android:prompt="@string/clock_prompt"
            app:backgroundTint="@color/colorPrimary"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginStart="@dimen/dp16w"
            android:layout_marginEnd="@dimen/dp16w"
            android:layout_marginTop="@dimen/dp20h"
            android:id="@+id/spinner_container"
            android:layout_below="@+id/calendarView"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/time_array"
                android:gravity="center"
                android:id="@+id/from_spinner"
                android:prompt="@string/clock_prompt"
                app:backgroundTint="@color/colorPrimary"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:prompt="@string/clock_prompt"
                android:gravity="center"
                android:id="@+id/to_spinner"
                android:entries="@array/time_array"
                app:backgroundTint="@color/colorPrimary"
                android:layout_weight="1"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_container"
            android:layout_marginTop="@dimen/dp10h"
            android:id="@+id/appointment_rl"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp64h"
            app:cardElevation="@dimen/dp8h"
            app:cardPreventCornerOverlap="false"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp13h"
                    android:layout_marginStart="@dimen/dp24w"
                    android:id="@+id/hours_count"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/hours_count"
                    android:layout_below="@+id/hours_count"
                    android:id="@+id/date_tv"
                    android:layout_marginTop="@dimen/dp5h"/>

                <Button
                    android:layout_width="@dimen/dp80w"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp16w"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/color_white"
                    android:id="@+id/add"
                    android:background="@drawable/button_green"
                    android:text="@string/add"/>

                <Button
                    android:layout_width="@dimen/dp80w"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp16w"
                    android:layout_centerVertical="true"
                    android:textColor="@color/color_white"
                    android:id="@+id/submit"
                    android:layout_marginStart="@dimen/dp16w"
                    android:background="@drawable/button_green"
                    android:text="@string/submit"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>